fix: fix tabbar z-index

--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -5,6 +5,7 @@
 	line-height: 1;
 	background-color: var(--color-neutral-100);
 	overflow: hidden;
+	z-index: 2;
 }
 .navList {
 	display: grid;
